--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 <!DOCTYPE html>
+<html>
+	<head>
+		<link rel="stylesheet" href="stylesheets/design.css">
+		<title>Fee Book</title>
+	</head>
+	<body>
+		<div class="wrapper">
+			<div class="push"></div>
+		</div>
+		<div class="footer">
+			<p class="footer_text">&copy; 2014 Viraj Chitnis</p>
+		</div>
+	</body>
+</html>
