Added control buttons
Added control buttons such as add, edit, delete, etc.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
 	</head>
 	<body>
 		<div class="wrapper">
+			<div id="body_div">
+				<table id="controls_table">
+					<tr>
+						<td id="controls_table_left">
+							<button>Add</button>
+							<button>Edit</button>
+							<button>Delete</button>
+						</td>
+						<td id="controls_table_right">
+							<button>Backup</button>
+							<button>Restore</button>
+						</td>
+					</tr>
+				</table>
+			</div>
 			<div class="push"></div>
 		</div>
 		<div class="footer">
