Added database table
Added a database table that will be dynamically filled using the data from the database.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<body>
 		<div class="wrapper">
 			<div id="body_div">
+				<h3 id="heading">Fee Book</h3>
 				<table id="controls_table">
 					<tr>
 						<td id="controls_table_left">
@@ -20,7 +21,46 @@
 						</td>
 					</tr>
 				</table>
+				<div id="db_div">
+					<table class="db_table">
+						<tr>
+							<th>Memo No.</th>
+							<th>Date</th>
+							<th>Partner</th>
+							<th>Solicitor/Client</th>
+							<th>Suit No.</th>
+							<th>Name of the party</th>
+							<th>Particulars</th>
+							<th>Fees (&#8377;)</th>
+							<th>Fees Recd.</th>
+							<th>Bal (&#8377;)</th>
+							<th>Dt of Recpt</th>
+							<th>Cheque No.</th>
+							<th>Cheque Dt.</th>
+							<th>Drawn on</th>
+							<th>Received from</th>
+						</tr>
+						<tr>
+							<td>001/04/13</td>
+							<td>1st Apr, 2013</td>
+							<td>Mrs. Shiraz Patodia</td>
+							<td>C/o Dua Associates</td>
+							<td>C/S No. 1124/2012, Suit No.1497/2006</td>
+							<td>Dow Agrosciences, LLC,USA & Anr. Vs. Venkateshwara Pesticides & Allied</td>
+							<td>Holding conference and Appearance</td>
+							<td>72000</td>
+							<td>72000</td>
+							<td>0</td>
+							<td>7/8/13</td>
+							<td>910291</td>
+							<td>29/7/2013</td>
+							<td>Deutsche Bank</td>
+							<td>Dua Associates</td>
+						</tr>
+					</table>
+				</div>
 			</div>
+			<p>&nbsp;</p>
 			<div class="push"></div>
 		</div>
 		<div class="footer">
