--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 				<div id="db_div">
 					<table class="db_table">
 						<tr>
+							<th></th>
 							<th>Memo No.</th>
 							<th>Date</th>
 							<th>Partner</th>
@@ -41,6 +42,7 @@
 							<th>Received from</th>
 						</tr>
 						<tr>
+							<td><input type="checkbox" name="id" value="the_id"></td>
 							<td>001/04/13</td>
 							<td>1st Apr, 2013</td>
 							<td>Mrs. Shiraz Patodia</td>
