Added version info to the footer

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 		</div>
 		<div class="footer">
 			<p class="footer_text">&copy; 2014 Viraj Chitnis</p>
+			<p class="footer_text">OfficeDB v0.0.1</p>
 		</div>
 	</body>
 </html>
